--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.3.3",
     "webpack": "^4.29.3",
