--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "initial-ui",
+  "name": "appeals-ui",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -13,14 +13,22 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^1.0.1",
+    "css-loader": "^2.1.0",
+    "extract-loader": "^3.1.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "json-loader": "^0.5.7",
+    "node-sass": "^4.11.0",
+    "sass": "^1.17.1",
+    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "typescript": "^3.3.3",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
+    "@material/form-field": "^0.44.1",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
     "react": "^16.8.1",
