--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,7 @@
         "noImplicitAny": true,
         "module": "commonjs",
         "target": "es5",
-        "jsx": "react",
-        "resolveJsonModule": true,
-        "esModuleInterop": true
+        "jsx": "react"
     },
     "include": [
         "./src/**/*"
